// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLogin component Snapshots When user is not signed matches 1`] = `
<div>
  <usernotlogged-stub />
</div>
`;

exports[`NavLogin component Snapshots When user is signed matches 1`] = `
<div>
  <userlogged-stub
    username="Lucas Nascimento"
  />
</div>
`;
